# shrew

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: funding.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml  shrew-cli.yml  shrew-core.yml  shrew-cpu.yml  shrew-cuda.yml  shrew-data.yml  shrew-ir.yml  shrew-nn.yml  shrew-optim.yml  shrew-python.yml  shrew.yml
crates/shrew/: ARCHITECTURE.md  Cargo.toml  README.md
crates/shrew-core/: Cargo.toml  README.md
crates/shrew-core/src/: backend.rs  backprop.rs  dtype.rs  dynamic_shape.rs  error.rs  layout.rs  lib.rs  op.rs  shape.rs  tensor.rs
crates/shrew-cuda/: Cargo.toml  README.md
crates/shrew-cuda/src/: kernels.rs  lib.rs  pool.rs
crates/shrew-cuda/tests/: cuda_tests.rs  gpu_nn_tests.rs  mixed_precision_tests.rs
crates/shrew-data/: Cargo.toml  README.md
crates/shrew-data/src/: async_loader.rs  augment.rs  combinators.rs  csv_dataset.rs  dataset.rs  image_folder.rs  lib.rs  loader.rs  mnist.rs  transform.rs
crates/shrew-data/tests/: data_tests.rs
crates/shrew-nn/: Cargo.toml  README.md
crates/shrew-nn/src/: activation.rs  attention.rs  batchnorm.rs  conv.rs  dropout.rs  embedding.rs  flatten.rs  groupnorm.rs  init.rs  layernorm.rs  lib.rs  linear.rs  loss.rs  metrics.rs  module.rs  rmsnorm.rs  rnn.rs  sequential.rs  transformer.rs
crates/shrew/src/: checkpoint.rs  distributed.rs  lib.rs  onnx.rs  profiler.rs  quantize.rs  safetensors.rs
crates/shrew/src/exec/: engine.rs  jit.rs  mod.rs  train.rs
crates/shrew/tests/: exec_tests.rs  jit_tests.rs  nn_tests.rs
docs/: book.toml
docs/book/: 404.html  intro.html  print.html  searcher-c2a407aa.js  searchindex-b0a1cf74.js  toc-addd0f18.js  toc.html
docs/book/architecture/: crates.html  execution.html  ir.html  overview.html
docs/book/dsl/: examples.html  grammar.html  index.html
docs/book/guides/python/: setup.html  usage.html
docs/book/guides/rust/: inference.html  setup.html
docs/book/guides/sw/: graphs.html  intro.html  tensors.html
docs/book/theme/: custom-1e994556.css
docs/src/: SUMMARY.md  intro.md
docs/src/architecture/: crates.md  execution.md  ir.md  overview.md
docs/src/dsl/: examples.md  grammar.md  index.md
docs/src/guides/: cuda_setup.md
docs/src/guides/python/: setup.md  usage.md
docs/src/guides/rust/: inference.md  setup.md
docs/src/guides/sw/: graphs.md  intro.md  tensors.md
examples/: demo_mlp.sw  demo_python_sw.py  demo_sklearn_iris.py  demo_wine_shrew.py  iris_classifier.sw  tiny_gpt.sw  wine_classifier.sw
examples/bench_ops/: Cargo.toml
examples/bench_ops/src/: main.rs
examples/char_gpt/: Cargo.toml
examples/char_gpt/src/: main.rs
examples/gpu_demo/: Cargo.toml
examples/gpu_demo/src/: main.rs
examples/linear_regression/: Cargo.toml
examples/linear_regression/src/: main.rs
examples/mlp_xor/: Cargo.toml
examples/mlp_xor/src/: main.rs
examples/mnist/: Cargo.toml  mnist_mlp.sw
examples/mnist/src/: main.rs
examples/mnist_cnn/: Cargo.toml
examples/mnist_cnn/src/: main.rs
examples/rnn_sequence/: Cargo.toml
examples/rnn_sequence/src/: main.rs
