[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "shrew-python"
version = "0.1.0"
description = "Python bindings for the Shrew deep learning library"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.20"]

[project.urls]
Homepage = "https://github.com/ginozza/shrew"
Repository = "https://github.com/ginozza/shrew"
Changelog = "https://github.com/ginozza/shrew/blob/main/CHANGELOG.md"

[tool.maturin]
manifest-path = "crates/shrew-python/Cargo.toml"
python-source = "python"
features = []
