[package]
name = "shrew-core"
description = "Core tensor, dtype, shape, layout, backend traits, and autograd for Shrew"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
num-traits.workspace = true
thiserror.workspace = true
rand.workspace = true
rand_distr.workspace = true
half.workspace = true
