[package]
name = "shrew-cuda"
description = "NVIDIA CUDA GPU backend for Shrew"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
shrew-core.workspace = true
cudarc.workspace = true
half.workspace = true
rand.workspace = true
rand_distr.workspace = true

[dev-dependencies]
shrew-nn.workspace = true
shrew-optim.workspace = true
shrew.workspace = true
