[package]
name = "shrew-data"
description = "Data loading, datasets, and batching for Shrew"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
shrew-core.workspace = true
rayon.workspace = true
rand.workspace = true
rand_distr.workspace = true
image = { workspace = true, optional = true }

[features]
default = []
image-folder = ["image"]

[dev-dependencies]
shrew-cpu.workspace = true
