[package]
name = "shrew-nn"
description = "Neural network layers, activations, and loss functions for Shrew"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
shrew-core.workspace = true
shrew-cpu.workspace = true
