[package]
name = "shrew"
description = "A deep learning library built from scratch in Rust"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
cuda = ["dep:shrew-cuda"]

[dependencies]
shrew-core.workspace = true
shrew-cpu.workspace = true
shrew-nn.workspace = true
shrew-optim.workspace = true
shrew-data.workspace = true
shrew-ir.workspace = true
serde_json.workspace = true
half.workspace = true
shrew-cuda = { workspace = true, optional = true }
